--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.26",
+    "@clerk/nextjs": "^5.3.0",
     "@hookform/resolvers": "^3.7.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -18,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "convex": "^1.14.0",
     "embla-carousel-auto-scroll": "^8.1.6",
     "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-react": "^8.1.6",
@@ -30,6 +33,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "sharp": "^0.33.4",
+    "svix": "^1.29.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
